Add HTTPX client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Ivan Koldakov", email = "ivan.koldakov@gmail.com" }
 ]
 requires-python = ">=3.11,<3.14"
-dependencies = []
+dependencies = [
+    "httpx>=0.28.1",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.27,<0.10.0"]
