--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11,<3.14"
 dependencies = [
     "httpx>=0.28.1",
+    "pydantic-settings>=2.12.0",
 ]
 
 [build-system]
