--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "datamodel-code-generator[ruff]>=0.53.0",
     "pre-commit>=4.5.1",
 ]
 test = [
